--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Li Chen"
-  avatar           : "profile.png"
+  avatar           : "lc_sq.jpeg"
   bio              : "Economist at University of Gothenburg"
   location         : "Sweden"
   employer         :
