--- a/_config.yml
+++ b/_config.yml
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Li Chen"
   avatar           : "lc_sq.jpeg"
-  bio              : 
+  bio              : "Economist"
   location         : 
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=MkEG5nUAAAAJ"
-  email            :  ""
+  email            :  "chen_li@tongji.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
